Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3480

Large stream id cause PROTOCOL_ERROR

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.3.0, 6.0.0
    • HTTP/2
    • None

    Description

      TS sends back a GOAWAY frame with PROTOCOL_ERROR if the stream id in a request is over the value of SETTINGS_MAX_CONCURRENT_STREAMS.

      This is because current implementation uses the value of the setting as the maximum value for stream id, but not the maximum number of concurrent streams.
      https://git-wip-us.apache.org/repos/asf?p=trafficserver.git;a=blob;f=proxy/http2/Http2ConnectionState.cc;h=574c4ce5cf8303476ca3c7440ac6e0038477a933;hb=26f438d486eaa04267db953d8d5f1249a63af2c3#l712

      How to reproduce:

      nghttp -v -m 51 http://localhost/
      

      Attachments

        1. ts-3480.diff
          2 kB
          Ryo Okubo

        Activity

          People

            rokubo Ryo Okubo
            maskit Masakazu Kitajo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: