TS-3480 Large stream id cause PROTOCOL_ERROR

(cherry picked from commit d38fc0a1d2d7b95eb801a3bde009d59acdb98559)